--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -22,6 +22,8 @@ body
         justify-content: center
         align-items: center
         
+    .nav_btn
+        display: none
     .navbar
             position: fixed
             left: 0
@@ -230,7 +232,7 @@ body
         .carousel_container
             margin-inline: 30px
             position: relative
-            margin-top: -50px
+            margin-top: -30px
 
             h3  
                 text-transform: uppercase
@@ -242,42 +244,43 @@ body
             .carousel
                 margin-bottom: 50px
             
-            .carousel_wrapper
-                border-radius: 5px
-                overflow: hidden
-                position: relative        
-                
-                .movies
-                    display: flex
-                    gap: 30px
-                    transition: 1.3s ease
+                .carousel_wrapper
+                    border-radius: 5px
+                    overflow: hidden
+                    position: relative   
 
-                #move_left
-                    left: 0
-
-                #move_right
-                    right: 0
-      
-                #move_left, #move_right
-                    position: absolute
-                    top: 0
-                    z-index: 2
-                    background: rgba(16,22,47, 0.7)
-                    width: 55px
-                    height: 320px
-                    border: none
-                    transition: 0.2s
-    
-                    i
-                        font-size: 26px
-                        transition: 0.4s ease
                     
-                    i
-                        transform: scale(2)
+                    .movies
+                        display: flex
+                        gap: 30px
+                        transition: 1.3s ease
 
-                #move_left:hover, #move_right:hover
-                    cursor: pointer 
-                    opacity: 1 
+                    #move_left
+                        left: 0
+
+                    #move_right
+                        right: 0
+        
+                    #move_left, #move_right
+                        position: absolute
+                        top: 0
+                        z-index: 2
+                        background: rgba(16,22,47, 0.7)
+                        width: 55px
+                        height: 320px
+                        border: none
+                        transition: 0.2s
+        
+                        i
+                            font-size: 26px
+                            transition: 0.4s ease
+                        
+                        i
+                            transform: scale(2)
+
+                    #move_left:hover, #move_right:hover
+                        cursor: pointer 
+                        opacity: 1 
 
             .carousel_wrapper:hover  
                 .carousel_controls
@@ -707,3 +710,119 @@ body
                     i
                         color: rgba(255, 255, 255, 0.8) 
                         font-size: 18px
+
+    @media (max-width: 1000px)
+        .nav_btn
+            display: inline
+            position: fixed
+            width: 50px
+            height: 50px
+            display: flex
+            align-items: center
+            justify-content: center
+            z-index: 99
+            right: 20px
+            top: 20px
+            background-color: #535bf2
+            border-radius: 10px
+            box-shadow: 0 0 9px 7px rgba(0,0,0,0.31)
+
+            i
+                font-size: 40px
+
+        .navbar
+            display: none 
+
+        .home, .watch
+            margin: 0
+            max-width: 100%
+
+            .header_container
+                height: 720px
+
+                .header_navigation
+
+                    .nav_header
+                        width: 60px 
+                    
+                .header_wrapper
+                    .header_filter1
+                        display: none
+
+                    .header_movie
+
+                        .header_movie_infos
+                            width: 100%
+                            margin-top: 150px
+                            min-width: 0
+                            padding: 0
+                            align-items: center
+                            text-align: center
+                            padding-inline: 10px
+                            max-width: none
+
+                            h2
+                                font-size: 28px
+
+                            p
+                                display: none
+
+                            span
+                                margin-top: 0
+                                justify-content: center
+
+                            #slash
+                                display: none
+
+                            .about_btn
+
+            .carousel_container
+                margin-inline: 10px
+
+                h3
+                    font-size: 22px
+
+                .carousel
+                    margin-bottom:95px
+
+                    .carousel_wrapper::-webkit-scrollbar-track
+                        background: #0a0e1f
+
+                    .carousel_wrapper
+                        overflow-x: auto
+                        
+
+                        .movies
+                            gap: 10px
+
+                        #move_left, #move_right
+                            display: none
+
+            
+            .movie
+                min-width: 180px
+
+                .poster
+                    height: 270px
+
+                .movie_info
+                    display: none
+
+        .watch
+            margin-left: 0
+
+    @media (max-width: 650px)
+        .home, .watch
+            .movie
+                min-width: 120px
+
+                .poster
+                    height: 210px
+
+        
+    
+
+
+
+
+
