--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -114,6 +114,59 @@ body {
   background: rgb(2, 0, 36);
   background: linear-gradient(0deg, rgb(16, 22, 47) 0%, rgba(63, 94, 251, 0) 50%);
 }
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos, .app .about .header_container .header_wrapper .header_movie .header_movie_infos {
+  position: absolute;
+  width: 50%;
+  min-width: 500px;
+  max-width: 750px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 100px;
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text {
+  max-width: 800px;
+  padding-right: 30px;
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text h2, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text h2 {
+  text-transform: uppercase;
+  font-size: 52px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text p, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text p {
+  font-size: 15px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details #slash, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details #slash {
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  width: 2px;
+  margin-inline: 10px;
+}
+.app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details span, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details span {
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 1.5px;
+  font-weight: 500;
+  padding: 1px 6px;
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
+  border-radius: 2px;
+  margin: 0;
+  margin-right: 5px;
+  text-align: center;
+}
 .app .home .header_container h3, .app .about .header_container h3 {
   text-transform: uppercase;
   font-size: 24px;
@@ -133,12 +186,6 @@ body {
 }
 .app .home .header_container::-webkit-scrollbar {
   display: none;
-}
-.app .home .header_container {
-  width: 100%;
-  height: 850px;
-  overflow: hidden;
-  position: relative;
 }
 .app .home .header_container .header_controls {
   display: none;
@@ -163,67 +210,7 @@ body {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.3);
 }
-.app .home .header_container .header_wrapper {
-  height: 100%;
-  position: relative;
-  display: flex;
-  transition: 1s ease;
-}
-.app .home .header_container .header_wrapper .header_movie {
-  height: 100%;
-  min-width: 100%;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos {
-  position: absolute;
-  width: 50%;
-  min-width: 500px;
-  max-width: 750px;
-  height: 100%;
-  left: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 100px;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos h2 {
-  text-transform: uppercase;
-  font-size: 52px;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos p {
-  font-size: 15px;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.7);
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos .details {
-  display: flex;
-  margin-top: 20px;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos .details span {
-  text-transform: uppercase;
-  font-size: 13px;
-  letter-spacing: 1.5px;
-  font-weight: 500;
-  padding: 1px 6px;
-  border: 2px solid rgba(255, 255, 255, 0.7);
-  color: rgba(255, 255, 255, 0.7);
-  border-radius: 2px;
-  margin: 0;
-  margin-right: 5px;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos .details p {
-  color: rgba(255, 255, 255, 0.8);
-  font-weight: 700;
-  margin-right: 10px;
-}
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos .about_btn {
+.app .home .header_container .header_movie .header_movie_infos .about_btn {
   width: 150px;
   height: 40px;
   background-color: transparent;
@@ -237,8 +224,9 @@ body {
   align-items: center;
   text-decoration: none;
   transition: 0.3s ease;
+  margin-top: 20px;
 }
-.app .home .header_container .header_wrapper .header_movie .header_movie_infos .about_btn:hover {
+.app .home .header_container .header_movie .header_movie_infos .about_btn:hover {
   background-color: #535bf2;
   color: rgba(255, 255, 255, 0.7);
   box-shadow: 0px 0px 20px 4px #535bf2;
@@ -306,37 +294,27 @@ body {
   background-position: center;
   cursor: pointer;
 }
-.app .carousel_container .movie_info {
+.app .movie_info {
   width: 100%;
   margin-top: 6px;
 }
-.app .carousel_container .movie_info p {
+.app .movie_info p {
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.app .carousel_container .movie_info .movie_props {
+.app .movie_info .movie_props {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-block: 5px;
 }
-.app .carousel_container .movie_info .movie_props p {
+.app .movie_info .movie_props p {
   font-size: 15px;
   font-weight: 400;
-  color: #8f8e8e;
-}
-.app .carousel_container .movie_info .movie_props .movie_actions {
-  display: flex;
-  gap: 15px;
-}
-.app .carousel_container .movie_info .movie_props .movie_actions button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 15px;
-}
-.app .carousel_container .movie_info .movie_props .movie_actions i {
   color: #8f8e8e;
 }
 .app .circular_progress {
@@ -369,6 +347,31 @@ body {
 }
 .app .about .header_container {
   height: 800px;
+}
+.app .about .header_container .header_wrapper .header_movie .header_movie_infos {
+  height: auto;
+  max-width: none;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  left: 0;
+  padding: 0;
+  padding-inline: 150px;
+  justify-content: space-between;
+  top: auto;
+  bottom: 100px;
+}
+.app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container .circular_progress {
+  width: 120px;
+  height: 120px;
+}
+.app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container .circular_progress span {
+  font-size: 26px;
+}
+.app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container .circular_progress:before {
+  width: 90%;
+  height: 90%;
+  background-color: #10162F;
 }
 .app .about #close_trailer {
   position: absolute;
@@ -414,67 +417,6 @@ body {
   transition: 0.2s ease;
   background-color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
-}
-.app .about .movie_infos {
-  position: absolute;
-  bottom: 60px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 150px;
-}
-.app .about .movie_infos .vote_container .circular_progress {
-  width: 100px;
-  height: 100px;
-}
-.app .about .movie_infos .vote_container .circular_progress span {
-  font-size: 26px;
-}
-.app .about .movie_infos .vote_container .circular_progress:before {
-  width: 90%;
-  height: 90%;
-  background-color: #10162F;
-}
-.app .about .movie_infos .infos_text {
-  max-width: 800px;
-  padding-right: 30px;
-}
-.app .about .movie_infos .infos_text h2 {
-  text-transform: uppercase;
-  font-size: 52px;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-.app .about .movie_infos .infos_text p {
-  font-size: 15px;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.7);
-}
-.app .about .movie_infos .infos_text .details {
-  display: flex;
-  margin-top: 20px;
-  align-items: center;
-}
-.app .about .movie_infos .infos_text .details #slash {
-  height: 25px;
-  background-color: rgba(255, 255, 255, 0.7);
-  border: none;
-  width: 2px;
-  margin-right: 10px;
-}
-.app .about .movie_infos .infos_text .details span {
-  text-transform: uppercase;
-  font-size: 13px;
-  letter-spacing: 1.5px;
-  font-weight: 500;
-  padding: 1px 6px;
-  border: 2px solid rgba(255, 255, 255, 0.7);
-  color: rgba(255, 255, 255, 0.7);
-  border-radius: 2px;
-  margin: 0;
-  margin-right: 5px;
-  text-align: center;
 }
 .app .about .link_trailer_container {
   width: 100%;
@@ -614,6 +556,9 @@ body {
 }
 .app .movies_page .movies_container .movies_grid .movie .poster {
   height: 380px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 4px;
 }
 .app .movies_page .page_controller {
   padding-block: 30px;
@@ -765,29 +710,10 @@ body {
   .app .home .carousel_container .carousel .movies .movie .movie_link .poster, .app .about .carousel_container .carousel .movies .movie .movie_link .poster {
     height: 270px;
   }
-  .app .home .carousel_container .carousel .movies .movie .movie_info, .app .about .carousel_container .carousel .movies .movie .movie_info {
-    display: none;
-  }
-  .app .home .carousel_container .carousel .movies .movie .watch, .app .about .carousel_container .carousel .movies .movie .watch {
-    margin-left: 0;
-  }
-  .app .home .carousel_container .carousel .movies .movie .watch .header_movie, .app .about .carousel_container .carousel .movies .movie .watch .header_movie {
+  .app .home .carousel_container .carousel .movies .movie .movie_link .header_movie, .app .about .carousel_container .carousel .movies .movie .movie_link .header_movie {
     height: auto;
   }
-  .app .home {
-    margin: 0;
-    max-width: 100%;
-  }
-  .app .home .header_container {
-    height: 720px;
-  }
-  .app .home .header_container .header_navigation .nav_header {
-    width: 60px;
-  }
-  .app .home .header_container .header_wrapper .header_filter1 {
-    display: none;
-  }
-  .app .home .header_container .header_wrapper .header_movie .header_movie_infos {
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos, .app .about .header_container .header_wrapper .header_movie .header_movie_infos {
     width: auto;
     height: auto;
     position: absolute;
@@ -807,17 +733,68 @@ body {
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(0, 0, 0, 0.3);
   }
-  .app .home .header_container .header_wrapper .header_movie .header_movie_infos h2 {
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text {
+    padding: 0;
+  }
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text h2, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text h2 {
     font-size: 28px;
+  }
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text span, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text span {
+    margin-top: 0;
+    justify-content: center;
+  }
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details, .app .about .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details {
+    width: 100%;
+    justify-content: center;
+  }
+  .app .movie_info {
+    display: none;
+  }
+  .app .watch {
+    margin-left: 0;
+  }
+  .app .movies_page {
+    margin: 0;
+  }
+  .app .movies_page .filters {
+    overflow: hidden;
+    padding-top: 80px;
+  }
+  .app .movies_page .filters .filters_navigation {
+    width: 86%;
+    margin: 0;
+    margin-inline: 40px;
+    overflow-x: auto;
+  }
+  .app .movies_page .filters .filters_navigation button {
+    display: none;
+  }
+  .app .movies_page .movies_container {
+    padding: 10px 10px;
+  }
+  .app .movies_page .movies_container .movies_grid .movie {
+    width: 180px;
+  }
+  .app .movies_page .movies_container .movies_grid .movie .poster {
+    height: 280px;
+  }
+  .app .home {
+    margin: 0;
+    max-width: 100%;
+  }
+  .app .home .header_container {
+    height: 720px;
+  }
+  .app .home .header_container .header_navigation .nav_header {
+    width: 60px;
+  }
+  .app .home .header_container .header_wrapper .header_filter1 {
+    display: none;
   }
   .app .home .header_container .header_wrapper .header_movie .header_movie_infos p {
     display: none;
   }
-  .app .home .header_container .header_wrapper .header_movie .header_movie_infos span {
-    margin-top: 0;
-    justify-content: center;
-  }
-  .app .home .header_container .header_wrapper .header_movie .header_movie_infos #slash {
+  .app .home .header_container .header_wrapper .header_movie .header_movie_infos .infos_text .details #slash {
     display: none;
   }
   .app .about {
@@ -825,6 +802,12 @@ body {
   }
   .app .about #go_back_btn {
     left: 30px;
+  }
+  .app .about .trailer_container {
+    width: 100%;
+  }
+  .app .about .trailer_container #close_trailer {
+    right: 50px;
   }
   .app .about .header_container {
     height: auto;
@@ -836,37 +819,18 @@ body {
   .app .about .header_container .header_wrapper .header_movie {
     min-height: 800px;
   }
-  .app .about .header_container .header_wrapper .movie_infos {
-    width: auto;
-    height: auto;
-    bottom: -100px;
-    max-width: 80%;
-    padding: 10px 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
+  .app .about .header_container .header_wrapper .header_movie .header_movie_infos {
     flex-direction: column;
-    background: rgba(0, 0, 0, 0.01);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    bottom: -70px;
   }
-  .app .about .header_container .header_wrapper .movie_infos .infos_text {
-    padding-right: 0px;
+  .app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container {
+    padding-top: 15px;
   }
-  .app .about .header_container .header_wrapper .movie_infos h2 {
-    font-size: 38px;
+  .app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container .circular_progress {
+    width: 80px;
+    height: 80px;
   }
-  .app .about .header_container .header_wrapper .movie_infos .vote_container {
-    padding-block: 8px;
-  }
-  .app .about .header_container .header_wrapper .movie_infos .vote_container .circular_progress {
-    width: 70px;
-    height: 70px;
-  }
-  .app .about .header_container .header_wrapper .movie_infos .vote_container .circular_progress span {
+  .app .about .header_container .header_wrapper .header_movie .header_movie_infos .vote_container .circular_progress span {
     font-size: 22px;
   }
   .app .about .link_trailer_container {
@@ -874,11 +838,30 @@ body {
   }
 }
 @media (max-width: 650px) {
-  .home .carousel_container .carousel .carousel_wrapper .movies .movie, .about .carousel_container .carousel .carousel_wrapper .movies .movie {
+  .app .home .carousel_container .carousel .carousel_wrapper .movies .movie, .app .about .carousel_container .carousel .carousel_wrapper .movies .movie {
     min-width: 120px;
   }
-  .home .carousel_container .carousel .carousel_wrapper .movies .movie .movie_link .poster, .about .carousel_container .carousel .carousel_wrapper .movies .movie .movie_link .poster {
+  .app .home .carousel_container .carousel .carousel_wrapper .movies .movie .movie_link .poster, .app .about .carousel_container .carousel .carousel_wrapper .movies .movie .movie_link .poster {
     height: 210px;
+  }
+  .app .movies_page .filters .filters_navigation .filters_wrapper {
+    gap: 20px;
+  }
+  .app .movies_page .filters .filters_navigation .filters_wrapper .option {
+    width: 120px;
+    height: 40px;
+  }
+  .app .movies_page .movies_container {
+    padding: 10px 10px;
+  }
+  .app .movies_page .movies_container .movies_grid .movie {
+    width: 120px;
+  }
+  .app .movies_page .movies_container .movies_grid .movie .poster {
+    height: 200px;
+  }
+  .app .movies_page .page_controller .page {
+    display: none;
   }
 }
 
