added TasntackQuery and refactored some code

--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -287,6 +287,8 @@ body
                 display: flex
                 gap: 30px
                 transition: 1.3s ease
+                overflow-x: auto
+                
 
            
 
