--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -277,6 +277,9 @@ body {
   display: flex;
   gap: 30px;
   transition: 1.3s ease;
+  overflow-x: auto;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 .app .carousel_container .movie {
   min-width: 220px;
@@ -471,10 +474,12 @@ body {
   text-align: center;
   width: 14%;
   min-width: 140px;
+  max-width: 200px;
 }
 .app .about .cast_container .cast_actors .actor p {
   font-size: 16px;
   font-weight: 900;
+  margin-top: 10px;
 }
 .app .about .cast_container .cast_actors .actor span {
   font-weight: 400;
@@ -485,6 +490,16 @@ body {
   width: 100%;
   border-radius: 5px;
 }
+
+.app .about .cast_container .cast_actors .actor .actor_image {
+  width: 100%;
+  aspect-ratio: 2/3;
+  background-color: white;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
 .app .about .carousel_container {
   margin-top: 50px;
   padding-bottom: 20px;
